# RIFFA_PROJECT

./: CMakeLists.txt  CMakeSettings.json  RIFFA_Project.sln  RIFFA_Project.vcxproj
include/: adate328_regs.h  mtsSLCB.h  riffa_driver.h
src/: main.cpp  mtsSLCB.cpp
